crates/solite-lexer/src/snapshots/solite_lexer__tests__test_1.snap
---
source: crates/solite-lexer/src/lib.rs
expression: result
snapshot_kind: text
---
[
    (
        "select",
        LegacyToken {
            kind: Select,
            start: 0,
            end: 6,
            value: None,
            contents: "select",
        },
    ),
    (
        "'rooga'",
        LegacyToken {
            kind: String,
            start: 7,
            end: 14,
            value: Text(
                "'rooga'",
            ),
            contents: "'rooga'",
        },
    ),
]
